@@ -25,6 +25,13 @@ class Smarty_Internal_Compile_Private_Block_Plugin extends Smarty_Internal_Compi
     public $optional_attributes = array('_any');
 
     /**
+     * nesting level
+     *
+     * @var int
+     */
+    private $nesting = 0;
+
+    /**
      * Compiles code for the execution of block plugin
      *
      * @param  array                                $args      array with attributes from parser
@@ -35,55 +42,75 @@ class Smarty_Internal_Compile_Private_Block_Plugin extends Smarty_Internal_Compi
      *
      * @return string compiled code
      */
-    public function compile($args, Smarty_Internal_TemplateCompilerBase $compiler, $parameter, $tag, $function)
+    public function compile($args, Smarty_Internal_TemplateCompilerBase $compiler, $parameter, $tag, $function = null)
     {
-        if (!isset($tag[5]) || substr($tag, - 5) != 'close') {
+        if (!isset($tag[ 5 ]) || substr($tag, - 5) != 'close') {
             // opening tag of block plugin
             // check and get attributes
             $_attr = $this->getAttributes($compiler, $args);
-            if ($_attr['nocache'] === true) {
+            $this->nesting ++;
+            if ($_attr[ 'nocache' ] === true) {
                 $compiler->tag_nocache = true;
             }
-            unset($_attr['nocache']);
-            // convert attributes into parameter array string
-            $_paramsArray = array();
-            foreach ($_attr as $_key => $_value) {
-                if (is_int($_key)) {
-                    $_paramsArray[] = "$_key=>$_value";
-                } else {
-                    $_paramsArray[] = "'$_key'=>$_value";
-                }
-            }
+            unset($_attr[ 'nocache' ]);
+            list($callback, $_paramsArray) = $this->setup($compiler, $_attr, $tag, $function);
             $_params = 'array(' . implode(",", $_paramsArray) . ')';
 
-            $this->openTag($compiler, $tag, array($_params, $compiler->nocache));
+            $this->openTag($compiler, $tag, array($_params, $compiler->nocache, $callback));
             // maybe nocache because of nocache variables or nocache plugin
             $compiler->nocache = $compiler->nocache | $compiler->tag_nocache;
             // compile code
-            $output = "<?php \$_smarty_tpl->smarty->_cache['tag_stack'][] = array('{$tag}', {$_params}); \$_block_repeat=true; echo {$function}({$_params}, null, \$_smarty_tpl, \$_block_repeat);while (\$_block_repeat) { ob_start();?>";
+            $output =
+                "<?php \$_block_repeat{$this->nesting}=true;\necho {$callback}({$_params}, null, \$_smarty_tpl, \$_block_repeat{$this->nesting});\nwhile (\$_block_repeat{$this->nesting}) {\nob_start();\n?>";
         } else {
             // must endblock be nocache?
             if ($compiler->nocache) {
                 $compiler->tag_nocache = true;
             }
             // closing tag of block plugin, restore nocache
-            list($_params, $compiler->nocache) = $this->closeTag($compiler, substr($tag, 0, - 5));
+            list($_params, $compiler->nocache, $callback) = $this->closeTag($compiler, substr($tag, 0, - 5));
             // This tag does create output
             $compiler->has_output = true;
             // compile code
-            if (!isset($parameter['modifier_list'])) {
-                $mod_pre = $mod_post = '';
+            if (!isset($parameter[ 'modifier_list' ])) {
+                $mod_pre = $mod_post = $mod_content = '';
+                $mod_content2 = 'ob_get_clean()';
             } else {
-                $mod_pre = ' ob_start(); ';
-                $mod_post = 'echo ' .
-                    $compiler->compileTag('private_modifier', array(), array('modifierlist' => $parameter['modifier_list'],
-                                                                             'value'        => 'ob_get_clean()')) . ';';
+                $mod_content2 = "\$_block_content{$this->nesting}";
+                $mod_content = "\$_block_content{$this->nesting} = ob_get_clean();\n";
+                $mod_pre = "ob_start();\n";
+                $mod_post = 'echo ' . $compiler->compileTag('private_modifier', array(),
+                                                            array('modifierlist' => $parameter[ 'modifier_list' ],
+                                                                  'value'        => 'ob_get_clean()')) . ";\n";
             }
-            $output = "<?php \$_block_content = ob_get_clean(); \$_block_repeat=false;" . $mod_pre .
-                " echo {$function}({$_params}, \$_block_content, \$_smarty_tpl, \$_block_repeat); " . $mod_post .
-                " } array_pop(\$_smarty_tpl->smarty->_cache['tag_stack']);?>";
+            $output = "<?php " . $mod_content . "\$_block_repeat{$this->nesting}=false;\n" . $mod_pre .
+                "echo {$callback}({$_params}, " . $mod_content2 .
+                ", \$_smarty_tpl, \$_block_repeat{$this->nesting});\n" . $mod_post . "}\n?>";
+            $this->nesting --;
         }
-
         return $output . "\n";
+    }
+
+    /**
+     * Setup callback and parameter array
+     *
+     * @param \Smarty_Internal_TemplateCompilerBase $compiler
+     * @param  array                                $_attr attributes
+     * @param  string                               $tag
+     * @param  string                               $function
+     *
+     * @return array
+     */
+    public function setup(Smarty_Internal_TemplateCompilerBase $compiler, $_attr, $tag, $function)
+    {
+        $_paramsArray = array();
+        foreach ($_attr as $_key => $_value) {
+            if (is_int($_key)) {
+                $_paramsArray[] = "$_key=>$_value";
+            } else {
+                $_paramsArray[] = "'$_key'=>$_value";
+            }
+        }
+        return array($function, $_paramsArray);
     }
 }
